# ac_roster

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  ac_morning_roster.ipynb  ac_morning_roster.py  acroster.db  app.py  architecture.txt  backend_algo.py  final.ipynb  form_models.py  form_stepper.py  main.ipynb  new.ipynb  new.py  new2.py  nice_app.py  pyproject.toml  requirements.txt  roster_editor_ui.py  roster_operations.py  something_pyproject.toml  ui_components.py  ui_config.py  ui_theme.py
.airbase/: airbase.link.json
.github/workflows/: airbase-deploy.yml  airbase-destroy.yml
acroster/: __init__.py  algorithm_orchestrator.py  assignment_engine.py  config.py  counter.py  database.py  db_handlers.py  officer.py  optimization.py  orchestrator_pipe.py  plotter.py  roster_builder.py  roster_editor.py  schedule_manager.py  schedule_utils.py  sos_scheduler.py  statistics.py  time_utils.py
acroster/roster_api/: DOCUMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  main.py  run.sh
acroster/roster_api/api/: deps.py
acroster/roster_api/core/: config.py  logging_config.py
acroster/roster_api/schemas/: roster.py
acroster/roster_api/services/: database.py  db_operations.py  roster.py
archive/: ac_morning_roster.ipynb  backend_algo.py  final.py  main.ipynb  main.py  new4.py  nice_app_archive.py  unused_functions.py
backend/: backend_oop.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/edits/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/history/: page.tsx
frontend/components/edits/: edit-form.tsx  edits-list.tsx
frontend/components/history/: history-table.tsx
frontend/lib/: api.ts  types.ts  utils.ts  validations.ts
frontend/project_readmes/: step1_PROJECT_SETUP.md  step2_ARCH_SUMMARY.md
tests/: test_api.py
(+7 files in other folders)
