[project]
name = "acroster"
version = "0.1.0"
description = "AC Roster Streamlit Application"
requires-python = ">=3.11,<3.13"
dependencies = [
    "absl-py==2.3.1",
    "altair==5.5.0",
    "attrs==25.4.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.14.2",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "defusedxml==0.7.1",
    "docopt==0.6.2",
    "fastjsonschema==2.21.2",
    "fonttools==4.60.1",
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "idna==3.11",
    "immutabledict==4.2.1",
    "ipython==8.12.3",
    "Jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyterlab-pygments==0.3.0",
    "kiwisolver==1.4.9",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.7",
    "mistune==3.1.4",
    "narwhals==2.8.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "numpy>=2.3.3",
    "ortools==9.14.6206",
    "pandas>=2.3.2",
    "pandocfilters>=1.5.0",
    "pillow>=11.3.0",
    "pipreqs==0.5.0",
    "plotly==6.3.1",
    "protobuf>=6.31.1",
    "pyarrow>=21.0.0",
    "pydeck==0.9.1",
    "pyparsing==3.2.5",
    "pytz==2025.2",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "setuptools==78.1.1",
    "smmap==5.0.2",
    "soupsieve==2.8",
    "streamlit==1.50.0",
    "tenacity==9.1.2",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "webencodings==0.5.1",
    "wheel==0.45.1",
    "yarg>=0.1.9",
    "pre-commit>=4.3.0",
]


[build-system]
requires = ["setuptools>=78.1.1", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["acroster"]